--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.2",
+    "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-dev-server": "^3.11.0"
   },
